<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">标签打印平台</string>
    <string name="welcome_str">欢迎使用标签打印</string>
    <string name="main_title">标签打印平台</string>
    <string name="printbtn_str">打印标签</string>
    <string name="clsbtn_str">清除选择</string>
    <string name="sending_request">发送请求中…</string>
    <string name="login_user_hint">请输入用户名</string>
    <string name="login_passwd_hint">请输入密码</string>
    <string name="detailed_title">标签详细</string>
    <string name="main_login">登录</string>
    <string name="labelname_str">标签名称</string>
    <string name="labelrote_str">路由详细</string>
    <string name="luyou_str">路由级别</string>
    <string name="title_str">标题</string>
    <string name="speed_str">速率</string>
    <string name="isprint_str">已打印</string>
    <string name="jiandan_str">建单时间</string>
    <string name="code_str">标签编码</string>
    <string name="title_str1"></string>
    <string name="title_str2">标签名称</string>
    <string name="title_str3">标签编码</string>
    <string name="user_name_hint">admin    <string></string></string>

</resources>