<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/login_top_bg" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_user_edit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/login_top_layout"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_selector"
        android:hint="@string/login_user_hint"
        android:maxLength="10"
        android:text="admin"
        android:textColor="#ff1d1d1d"
        android:textColorHint="#ff666666"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_passwd_edit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/login_user_edit"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_selector"
        android:hint="@string/login_passwd_hint"
        android:inputType="textPassword"
        android:textColor="#ff1d1d1d"
        android:textColorHint="#ff666666"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_passwd_edit"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/main_login_selector"
            android:gravity="center"
            android:text="@string/main_login"
            android:textColor="#ffffff"
            android:textSize="18.0sp" />
    </RelativeLayout>

</RelativeLayout>